Fixed wrong padding in item show details

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -264,6 +264,7 @@
 
   .item--bottom & {
     display: block;
+    padding: 0;
   }
 
   .simple-view & {
